# ecoevolity

./: .buildinfo  .gitignore  CHANGES.md  CHANGES.txt  CMakeLists.txt  README.md  Singularity  TODO.md  acknowledgments.html  background.html  biallelic-character-data.html  build-ncl.sh  build-yaml-cpp.sh  build.sh  changes.html  citation.html  genindex.html  glossary.html  index.html  installation.html  license.html  objects.inv  run-test-suite.sh  search.html  searchindex.js  yaml-config.html
.github/workflows/: build-release.yml
_sources/: acknowledgments.rst.txt  citation.rst.txt  index.rst.txt  installation.rst.txt  yaml-config.rst.txt
_sources/tutorials/: gecko-divergences.rst.txt
_static/: custom.css
cmake/modules/: FindNCL.cmake  FindPLL.cmake  FindYamlCpp.cmake  PreventInSourceBuild.cmake  TrackGitRevision.cmake  TrackGitRevision.cmake.in
dependencies/: .gitignore  build-ncl.sh  build-pll.sh  build-yaml-cpp.sh
dev-tools/: .gitignore  README.md  prep-tests.sh  run-tests.sh
doc/: conf.py  index.rst  installation.rst  prerequisites.rst  yaml-config.rst
docs/: .buildinfo  Makefile  acknowledgments.html  acknowledgments.rst  background.rst  changes.html  citation.html  citation.rst  conf.py  genindex.html  glossary.html  glossary.rst  index.html  index.rst  installation.html  installation.rst  license.html  license.rst  objects.inv  search.html  searchindex.js  tutorials.rst  yaml-config.rst
docs-source/: .gitignore  Makefile  conda-env.yml  python-requirements.txt  setup_docs_env.sh
docs-source/scripts/: update-bib-file.sh
docs-source/source/: changes.rst  conf.py  index.rst
docs-source/source/_static/: convergence-stats.tsv
docs-source/source/_templates/: layout.html
docs-source/source/ecoevolity/: background.rst  biallelic-character-data.rst  index.rst  yaml-config.rst
docs-source/source/phycoeval/: background.rst  biallelic-character-data.rst  index.rst  yaml-config.rst
docs-source/source/snippets/: terminology.rst
docs-source/source/tutorials/: index.rst  parameter-key.rst  simulation-analysis.rst
docs-source/source/zbib/: references.bib  references.rst
docs/_sources/: acknowledgments.rst.txt  changes.rst.txt  glossary.rst.txt  index.rst.txt  installation.rst.txt
docs/_sources/ecoevolity/: background.rst.txt  index.rst.txt
docs/_sources/phycoeval/: biallelic-character-data.rst.txt
docs/_static/: alabaster.css  custom.css
docs/ecoevolity/: background.html  biallelic-character-data.html  index.html  yaml-config.html
docs/ecoevolity/tutorials/: index.html  (+6 more)
docs/phycoeval/: background.html  biallelic-character-data.html  index.html  yaml-config.html
docs/snippets/: brief-background.rst
docs/tutorials/: gecko-divergences.rst  get-example-data.rst  index.rst  parameter-key.rst  selecting-priors.rst  simulation-analysis.rst
docs/workshops/: index.html  ssb-2018.html
docs/zbib/: references.bib  references.html  references.rst
src/coevolity/: CMakeLists.txt  coevolity_main.cpp  error.hpp  util.cpp  util.hpp
src/ecoevolity/: .gitignore  CMakeLists.txt  asrv.hpp  assert.hpp  basenetnode.hpp  basenode.hpp  basetree.hpp  collection.cpp  collection.hpp  complex.hpp  data.cpp  data.hpp  debug.hpp  discretized_gamma.hpp  dpprobs.cpp  dpprobs.hpp  dpprobs_main.cpp  ecoevolity.cpp  ecoevolity.hpp  ecoevolity_main.cpp  error.cpp  error.hpp  general_tree.cpp  general_tree.hpp  general_tree_operator.hpp  general_tree_operator_schedule.hpp  general_tree_sample.hpp  general_tree_settings.hpp  likelihood.cpp  likelihood.hpp  log_path_util.hpp  math_util.hpp  matrix.cpp  matrix.hpp  mcmc.hpp  model.hpp  nephila.cpp  nephila.hpp  nephila_main.cpp  netlikelihood.cpp  (+69 more)
test/: CMakeLists.txt  catch_setup.hpp  extra_test_rj_beta_operator.cpp  test_basetree.cpp  test_collection.cpp  test_data.cpp  test_ecoevolity_cli.cpp  test_error.cpp  test_general_tree.cpp  test_general_tree_operator.cpp  test_general_tree_operator_schedule.cpp  test_general_tree_rj_operator.cpp  test_general_tree_settings.cpp  test_general_tree_topo_operators.cpp  test_math_util.cpp  test_matrix.cpp  test_missing_data.cpp  test_netlikelihood.cpp  test_netnode.cpp  test_node.cpp  test_operator.cpp  test_parameter.cpp  test_path.cpp  test_phycoeval_cli.cpp  test_phycoeval_cli_long.cpp  test_phylonet.cpp  test_pll.cpp  test_prior_sampling.cpp  test_probability.cpp  test_rng.cpp  test_settings.cpp  test_simcoevolity_cli.cpp  test_simphycoeval_cli.cpp  test_simphycoeval_cli_long.cpp  test_simple_nuc_data.cpp  test_split.cpp  test_spreadsheet.cpp  test_stats_util.cpp  test_string_util.cpp  test_sumphycoeval_cli.cpp  (+9 more)
test/data/: 3-tip-target-tree-comb.nex  3-tip-trees-comb.nex  4-tip-target-tree-14-23-shared-alt-tip-name.nex  4-tip-target-tree-14-23-shared.nex  4-tip-target-tree-comb.nex  4-tip-trees-12-34.nex  4-tip-trees-12.nex  4-tip-trees-13-24.nex  4-tip-trees-14-23-shared.nex  4-tip-trees-34.nex  4-tip-trees-comb-alt-tip-label.nex  4-tip-trees-comb.nex  4-tip-trees-ladder-1234.nex  4-tip-trees-ladder-4321.nex  5-tip-target-tree-comb.nex  5-tip-trees-comb.nex  9-tip-bif-target-tree.nex  9-tip-gen-trees.nex  CMakeLists.txt  Cyrtodactylus-tutorial-data-expected-wtheta-output.txt  Cyrtodactylus-tutorial-data.nex  Cyrtodactylus-tutorial-data.yml  aflp_25-with-constant.nex  aflp_25.nex  config-dir-pop.yml  config-general-tree.yml  config-relative-root.yml  config.yml  diploid-dna-constant-missing-2pops.nex  diploid-dna-constant-missing-default-dominance.yml  diploid-dna-constant-missing-nohets.nex  diploid-dna-constant-missing-triallelic-cs10.nex  diploid-dna-constant-missing-triallelic-disjoint.nex  diploid-dna-constant-missing-triallelic-nohets.nex  diploid-dna-constant-missing-triallelic.nex  diploid-dna-constant-missing.nex  diploid-dna-constant-missing.yml  diploid-dna-sample-size-changes-nohets.nex  diploid-dna-triallelic.nex  diploid-dna.nex  (+78 more)
tutorials/: gecko-divergences.html  get-example-data.html  index.html  parameter-key.html  selecting-priors.html  simple-empirical-analysis.html  simulation-analysis.html
workshops/: index.html  ssb-2018.html
zbib/: references.html
(+12 files in other folders)
